All files updated to have offcanvas mobile nav

--- a/about/about.html
+++ b/about/about.html
@@ -2,12 +2,12 @@
 <!--
 	Copyright: www.gabesmithtrombone.com 2017
 	Created and powered by: CS4 Development
-	Update: 6/17/2017
+	Update: 6/20/2017
 	About Page
 -->
 <html>
 	<head>
-		<title>Gabe Smith | Home</title>
+		<title>Gabe Smith | About</title>
 		<link rel="stylesheet" href="css/about.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -19,79 +19,89 @@
 
 	<body class="body">
 
-	<div class="header">	
-	  <header>
-		<a href="../index.html">Gabe Smith</a>
-	  </header>
-	</div>
-	
-	<div>
-	  <nav class="navbar">
-		<ul>
-		  <li><a href="../index.html">Home</a></li>
-		  <li><a href="about.html">About</a></li>
-		  <li><a href="../media/media.html">Media</a></li>	
-		  <li><a href="../lessons/lessons.html">Lessons</a></li>
-		  <li><a href="../form/contactform.php">Contact</a></li>
-		</ul>
-	  </nav>
-	</div>
+		<div class="header">	
+		  <header>
+			<a href="../index.html">Gabe Smith</a>
+		  </header>
+		</div>
 
-	<div class="mobile-nav">
-	     <div class="menu-btn" id="menu-btn">
-		   <div></div>
-		   <span></span>
-		   <span></span>
-		   <span></span>
-	     </div>
-	     <div class="responsive-menu">
-	        <ul>
-	           <li><a href="../index.html">Home</a></li>
-	           <li><a href="about.html">About</a></li>
-	           <li><a href="../media/media.html">Media</a></li>
-	           <li><a href="../lessons/lessons/html">Lessons</a></li>
-	           <li><a href="../form/contactform.php">Contact</a></li>
-	        </ul>
-	     </div>
-	
-	<!--Icons-->
-	<div class="icons">
-	  <a href="https://www.linkedin.com/in/gabriel-smith-906bb0ab/"><img src="images/linkedin-logo.png" height="50" width="50"></a>
-	  <a href="https://www.facebook.com/profile.php?id=100009486104288"><img src="images/facebook-logo.png" height="50" width="50"></a>
-	</div>
-	</body>
+	<!-- Start Main Nav -->
+		<div>
+		  <nav class="navbar">
+			<ul>
+			  <li><a href="../index.html">Home</a></li>
+			  <li><a href="about.html">About</a></li>
+			  <li><a href="../media/media.html">Media</a></li>	
+			  <li><a href="../lessons/lessons.html">Lessons</a></li>
+			  <li><a href="../form/contactform.php">Contact</a></li>
+			</ul>
+		  </nav>
+		</div>
+	<!-- End Main Nav -->
 
-	
-	<div class="about-the-author">
-	  <h3 class="author-title">Bio</h3>
-	  <div class="row">
-	    <div class="small-12 medium-4 columns">
-	      <div class="author-image">
-	        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/President_Barack_Obama.jpg/480px-President_Barack_Obama.jpg">
-	      </div>
-	    </div>
-	    <div class="small-12 medium-8 columns">
-	      <h4 class="separator-left">Gabe Smith</h4>
-	      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores eum, iusto vel repudiandae, quaerat soluta sequi officia. Blanditiis atque, illo eaque sint in architecto illum nostrum repudiandae labore tenetur! Eaque impedit pariatur odio ad ipsum qui aspernatur dolorem consequuntur a molestias nisi, quae voluptatem expedita, inventore voluptatibus dolores, veritatis corporis facilis laudantium explicabo vero! Non hic quia facilis blanditiis eum.</p>
-	    </div>
+	<!-- Start Mobile Nav -->
+	 <div class="mobilecontainer">
+		<div id="offcanvas-full-screen" class="offcanvas-full-screen" data-off-canvas data-transition="overlap">
+		  <div class="offcanvas-full-screen-inner">
+		    <button class="offcanvas-full-screen-close" aria-label="Close menu" type="button" data-close>
+		      <span aria-hidden="true">&times;</span>
+		    </button>
+
+		    <ul class="offcanvas-full-screen-menu">
+		      <li><a href="../index.html">Home</a></li>
+		      <li><a href="about.html">About</a></li>
+		      <li><a href="../media/media.html">Media</a></li>
+		      <li><a href="../lessons/lessons.html">Lessons</a></li>
+		      <li><a href="../form/contactform.php">Contact</a></li>
+		    </ul>
+		  </div>
+		</div>
+
+		<div class="off-canvas-content" data-off-canvas-content>
+		  <div class="top-bar">
+		    <div class="top-bar-left">
+		      <button class="menu-icon dark" type="button" data-toggle="offcanvas-full-screen"></button>
+		    </div>
+		  </div>
+		</div>
 	  </div>
-	</div>
+	<!-- End Mobile Nav -->
 
+		
+	<!-- Start  Icons -->
+		<div class="icons">
+		  <a href="https://www.linkedin.com/in/gabriel-smith-906bb0ab/"><img src="images/linkedin-logo.png" height="50" width="50"></a>
+		  <a href="https://www.facebook.com/profile.php?id=100009486104288"><img src="images/facebook-logo.png" height="50" width="50"></a>
+		</div>
+	<!-- End Icons -->
 
-  
+	<!-- Start Bio -->
+		<div class="about-the-author">
+		  <h3 class="author-title">Bio</h3>
+		  <div class="row">
+		    <div class="small-12 medium-4 columns">
+		      <div class="author-image">
+		        <img src="images/gabe.jpg">
+		      </div>
+		    </div>
+		    <div class="small-12 medium-8 columns">
+		      <h4 class="separator-left">Gabe Smith</h4>
+		      <p>Gabriel Smith is a trombonist and private teacher currently residing in north central Oklahoma. Gabe recently completed his graduate studies at Oklahoma State University (MM &apos;17) under the tutelage of Paul Compton at Oklahoma State University. Before moving to Oklahoma to pursue his master&apos;s degree, Gabe studied with Timothy Riordan at VanderCook College of Music in Chicago (BM &apos;15).</p>
+		      <p>While at Oklahoma State, Gabe performed with various ensembles including the symphony orchestra (principal trombone), symphonic band (principal trombone), jazz ensemble (lead trombone), trombone octet, trombone quartet, and jazzbones. Gabe also conducted the trombone choir and taught private lessons to undergraduate students, a privilege available through a graduate assistantship.</p>
+		      <p>While in Chicago, Gabe studied music education coursework at VanderCook and performed with the VanderCook wind ensemble, orchestra, and jazz band, as well as the Chicago Classical Symphony Orchestra. Gabe also had the privilege of performing as a featured soloist with the VanderCook trombone choir. Gabe also performed with the VanderCook Symphonic Band at the Midwest clinic from 2011-2014.</p>
+		      <p>Gabe&apos;s freelance experience includes playing in sacred settings, brass quintets, and pit orchestras for musicals such as the Music Man, Damn Yankees!, Crazy for You, and Company. While playing with the Classical Symphony Orchestra, Gabe performed major works and symphonies by composers such as Beethoven, Mahler, Tchaikovsky, Nielsen, Debussy, and Mussorgsky.</p>
+		    </div>
+		  </div>
+		</div>
+	<!-- End Bio -->
 
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/foundation.min.js"></script>
+		<script type="text/javascript">$(document).foundation();</script>
 
-	<footer>&copy; 2017 Gabe Smith. Powered by <a href="https://www.cs4development.com">CS4 Development</a></footer>
-	<!--<script src="script.js"></script>-->
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
-	 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/foundation.min.js"></script>
+	</body>
+ 
+	<footer>&copy; 2017 Gabe Smith. Site powered by <a href="http://www.cs4development.com">CS4 Development</a></footer>
+	 
 
-	<script type="text/javascript">
-		jQuery(function($){
-	    	     $( '.menu-btn' ).click(function(){
-	    	     $('.responsive-menu').toggleClass('expand')
-	    	     })
-	        })
-	</script>
-
-	</html>
+</html>
