--- a/lessons/lessons.html
+++ b/lessons/lessons.html
@@ -2,17 +2,18 @@
 <!--
 	Copyright: www.gabesmithtrombone.com 2017
 	Created and powered by: CS4 Development
-	Update: 6/8/2017
+	Update: 6/20/2017
 	Lessons Page
 -->
 <html>
 	<head>
-		<title>Gabe Smith | Home</title>
+		<title>Gabe Smith | Lessons</title>
 		<link rel="stylesheet" href="css/lessons.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation-flex.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/motion-ui/1.1.1/motion-ui.css" />
 		<link rel="icon" type="image/jpg" href="../images/gs_icon.jpg">
 		<link rel="apple-touch-icon" href="../images/gs_icon.jpg"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -20,111 +21,150 @@
 
 	<body class="body">
 
-	<div class="header">	
-	  <header>
-		<a href="../index.html">Gabe Smith</a>
-	  </header>
-	</div>
+		<div class="header">	
+		  <header>
+			<a href="../index.html">Gabe Smith</a>
+		  </header>
+		</div>
+
+	<!-- Start Main Nav -->
+		<div>
+		  <nav class="navbar">
+			<ul>
+			  <li><a href="../index.html">Home</a></li>
+			  <li><a href="../about/about.html">About</a></li>
+			  <li><a href="../media/media.html">Media</a></li>	
+			  <li><a href="lessons.html">Lessons</a></li>
+			  <li><a href="../form/contactform.php">Contact</a></li>
+			</ul>
+		  <nav>
+		</div>
+	<!-- End Main Nav -->
+
+	<!-- Start Mobile Nav -->
+		  <div class="mobilecontainer">
+			<div id="offcanvas-full-screen" class="offcanvas-full-screen" data-off-canvas data-transition="overlap">
+			  <div class="offcanvas-full-screen-inner">
+			    <button class="offcanvas-full-screen-close" aria-label="Close menu" type="button" data-close>
+			      <span aria-hidden="true">&times;</span>
+			    </button>
+			    <ul class="offcanvas-full-screen-menu">
+			      <li><a href="../index.html">Home</a></li>
+			      <li><a href="../about/about.html">About</a></li>
+			      <li><a href="../media/media.html">Media</a></li>
+			      <li><a href="lessons.html">Lessons</a></li>
+			      <li><a href="../form/contactform.php">Contact</a></li>
+			    </ul>
+			  </div>
+			</div>
+			<div class="off-canvas-content" data-off-canvas-content>
+			  <div class="top-bar">
+			    <div class="top-bar-left">
+			      <button class="menu-icon dark" type="button" data-toggle="offcanvas-full-screen"></button>
+			    </div>
+			  </div>
+			</div>
+		  </div>
+	<!-- End Mobile Nav -->
 	
-	<div>
-	  <nav class="navbar">
-		<ul>
-		  <li><a href="../index.html">Home</a></li>
-		  <li><a href="../about/about.html">About</a></li>
-		  <li><a href="../media/media.html">Media</a></li>	
-		  <li><a href="lessons.html">Lessons</a></li>
-		  <li><a href="../form/contactform.php">Contact</a></li>
-		</ul>
-	  <nav>
-	</div>
+	<!-- Start Icons -->
+		<div class="icons">
+		  <a href="https://www.linkedin.com/in/gabriel-smith-906bb0ab/"><img src="images/linkedin-logo.png" height="50" width="50"></a>
+		  <a href="https://www.facebook.com/profile.php?id=100009486104288"><img src="images/facebook-logo.png" height="50" width="50"></a>
+		</div>
+	<!-- End Icons -->
 
-	<div class="mobile-nav">
-	     <div class="menu-btn" id="menu-btn">
-		   <div></div>
-		   <span></span>
-		   <span></span>
-		   <span></span>
-	     </div>
-	     <div class="responsive-menu">
-	        <ul>
-	           <li><a href="../index.html">Home</a></li>
-	           <li><a href="about.html">About</a></li>
-	           <li><a href="../media/media.html">Media</a></li>
-	           <li><a href="../lessons/lessons/html">Lessons</a></li>
-	           <li><a href="../form/contactform.php">Contact</a></li>
-	        </ul>
-	     </div>
-	</div>
+	<!-- Start Testimonial -->
+		<div class="full-width-testimonial">
+		  <div class="full-width-testimonial-section">
+		    <div class="full-width-testimonial-icon text-center">
+		      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+		         width="41px" height="34px" viewBox="-235 240 41 34" style="enable-background:new -235 240 41 34;" xml:space="preserve">
+		          <path class="quote-path" d="M-231.3,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4
+		            h8.1v12.8h-14.4V260.4z"/>
+		          <path class="quote-path" d="M-212,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4h8.1
+		            v12.8H-212V260.4z"/>
+		      </svg>
+		    </div>
+		    <div class="full-width-testimonial-content">
+		      <h5 class="full-width-testimonial-text">Don't only practice your art, but force your way into its secrets, for it and knowledge can raise men to the divine.
+		      </h5>
+		      <p class="full-width-testimonial-source">Ludwig van Beethoven</p>
+		      <span class="full-width-testimonial-source-context">Bonn, Germany</span>
+		    </div>
+		  </div>
+		</div>
+	<!-- End Testimonial -->
+
+	<!-- Start three up-->
+		<section class="marketing-site-three-up">
+		  <h2 class="marketing-site-three-up-headline">Dynamic, Flexible, Highly Recommended</h2>
+		  <div class="row medium-unstack">
+		    <div class="columns">
+		      <i class="fi-torsos" aria="true"></i>
+		      <h4 class="marketing-site-three-up-title">One-on-One Learning</h4>
+		      <a href="#panel1v" class="button secondary hollow" Learn More>Learn More</a>
+		    </div>
+		    <div class="columns">
+		      <i class="fi-torsos-all" aria="true"></i>
+		      <h4 class="marketing-site-three-up-title">Ensemble Coaching</h4><a href="#panel2v" class="button secondary hollow" Learn More>Learn More</a>
+		    </div>
+		    <div class="columns">
+		      <i class="fi-dollar" aria-hidden="true"></i>
+		      <h4 class="marketing-site-three-up-title">Reasons to Invest</h4>
+		      <a href="#panel3v" class="button secondary hollow" Learn More>Learn More</a>
+		    </div>
+		    <div class="columns">
+		      <i class="fi-clock" aria-hidden="true"></i>
+		      <h4 class="marketing-site-three-up-title">Flexible Scheduling</h4>
+		      <a href="#panel4v" class="button secondary hollow" Learn More>Learn More</a>
+		    </div>
+		  </div>
+		</section>
+	<!-- End three up -->
 	
-	<!--Icons-->
-	<div class="icons">
-	  <a href="https://www.linkedin.com/in/gabriel-smith-906bb0ab/"><img src="images/linkedin-logo.png" height="50" width="50"></a>
-	  <a href="https://www.facebook.com/profile.php?id=100009486104288"><img src="images/facebook-logo.png" height="50" width="50"></a>
-	</div>
-	
-	<div class="full-width-testimonial">
-	  <div class="full-width-testimonial-section">
-	    <div class="full-width-testimonial-icon text-center">
-	      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	         width="41px" height="34px" viewBox="-235 240 41 34" style="enable-background:new -235 240 41 34;" xml:space="preserve">
-	          <path class="quote-path" d="M-231.3,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4
-	            h8.1v12.8h-14.4V260.4z"/>
-	          <path class="quote-path" d="M-212,260.4c0-5,1.3-8.8,3.7-11.7c2.4-2.8,6-4.6,10.5-5.5v5c-3.5,1-6,2.8-7.1,5.5c-0.7,1.4-0.9,2.8-0.8,4h8.1
-	            v12.8H-212V260.4z"/>
-	      </svg>
-	    </div>
-	    <div class="full-width-testimonial-content">
-	      <h5 class="full-width-testimonial-text">Don't only practice your art, but force your way into its secrets, for it and knowledge can raise men to the divine.
-	      </h5>
-	      <p class="full-width-testimonial-source">Ludwig van Beethoven</p>
-	      <span class="full-width-testimonial-source-context">Bonn, Germany</span>
-	    </div>
-	  </div>
-	</div>
+	<!-- Start Info -->
+		  <div class="tab-container">
+			<div class="row collapse" id="row">
+			    <ul class="tabs" data-deep-link="true" data-tabs id="example-tabs">
+			      <li class="tabs-title is-active"><a href="#panel1v" aria-selected="true">Tab 1</a></li>
+			      <li class="tabs-title"><a href="#panel2v">Tab 2</a></li>
+			      <li class="tabs-title"><a href="#panel3v">Tab 3</a></li>
+			      <li class="tabs-title"><a href="#panel4v">Tab 4</a></li>
+			    </ul>
+			  <div class="medium-9 columns" id="tabs">
+			    <div class="tabs-content" id="tabs-content" data-tabs-content="example-tabs">
+			      <div class="tabs-panel" id="panel1v">
+			        <p id="tab-head">One-on-One Learning</p>
+			        <p>Students who are studying individually are able to take 30 minute or 60 minute lessons. During this time we will address fundamental trombone technicians including articulation, breathing, and embouchure. We will also study etudes and solo repertoire which will be contoured to each student&apos;s needs and goals. Examples of goals a student may have that I can assist them in achieving could be making regional or all-state band, performing a piece at an end of the year recital, developing good practice techniques, and ensemble playing. Parents, directors, and students alike, please feel free to contact.me with any questions you may have or for a phone or email consultation.</p>
+			      </div>
+			      <div class="tabs-panel" id="panel2v">
+			        <p id="tab-head">Ensemble Coaching</p>
+			        <p>It is a belief of mine and every successful teacher I&apos;ve known that playing chamber music is one of the best things musicians can be involved in. By bringing individuals with different abilities together to practice and perform music, students will learn how to work with one another, how to bring their individual best to reach a collective goal, and the joy that comes with group music making.</p>
+			        <p>I offer quartet and sectional coaching. Quartets can be composed of students from the same or different schools. Sectional coaching time and location will be determined by the director if desired. Parents, students, and directors, please reach out if you or a trombonist you know may be interested in participating in a quartet. Sectional coaching is available for high and low brass.</p>
+			      </div>
+			      <div class="tabs-panel" id="panel3v">
+			        <p id="tab-head">Why should I Invest in Lessons?</p>
+			        <p>Music provides a creative outlet and craft for students to pursue. Whether or not my students ultimately end up making a career out of music or play as a hobby I attempt to build a healthy and transferable growth mindset when I am teaching. I believe hard work trumps natural talent every time. The discipline required to study a musical instrument is great but not out of reach for anyone truly willing to put in the time. By studying an instrument and constantly putting work in towards a consistent goal students are also learning the discipline to pursue other goals they may have.</p>
+			        <p>When one invests in something they expect a return. Being a musician, I am biased to believe the skill and experience is reason enough, students who intend to go to college will find a wider range of scholarship options open to them as a trained musician. Many Texas residents have attained an out-of-state tuition waiver by participating in marching band while attending Oklahoma State University (a waiver of $7,000, more than half of the out of state tuition of $11,000 for the 2016-17 academic year).</p>
+			      </div>
+			      <div class="tabs-panel" id="panel4v">
+			        <p id="tab-head">Flexible Scheduling</p>
+			        <p>I do my best to keep my schedule flexible to accommodate students. I am able to teach out of my home in Stillwater, OK as well as travel to schools and homes. Please contact me through my contact page found in the navigation menu.</p>
+			        <a href="../form/contactform.php#contactus" class="button small">Contact</a>
+			      </div>
+			    </div>
+			  </div>
+			</div>
+		  </div>
+		<!-- End Info -->
 
-	<section class="marketing-site-three-up">
-	  <h2 class="marketing-site-three-up-headline">Dynamic, Flexible, Highly Recommended</h2>
-	  <div class="row medium-unstack">
-	    <div class="columns">
-	      <i class="fi-torsos" aria="true"></i>
-	      <h4 class="marketing-site-three-up-title">One-on-One Learning</h4>
-	      <p class="marketing-site-three-up-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint, voluptatibus eaque natus ad eius.</p>
-	    </div>
-	    <div class="columns">
-	      <i class="fi-torsos-all" aria="true"></i>
-	      <h4 class="marketing-site-three-up-title">Group Coaching</h4>
-	      <p class="marketing-site-three-up-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint, voluptatibus eaque natus ad eius.</p>
-	    </div>
-	    <div class="columns">
-	      <i class="fi-book" aria-hidden="true"></i>
-	      <h4 class="marketing-site-three-up-title">Teaching Philosophy</h4>
-	      <p class="marketing-site-three-up-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint, voluptatibus eaque natus ad eius.</p>
-	    </div>
-	    <div class="columns">
-	      <i class="fi-clock" aria-hidden="true"></i>
-	      <h4 class="marketing-site-three-up-title">Flexible Scheduling</h4>
-	      <p class="marketing-site-three-up-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi sint, voluptatibus eaque natus ad eius.</p>
-	    </div>
-	  </div>
-	</section>
-
-
-
-
+		 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
+		 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/plugins/foundation.core.js"></script>
+		 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/foundation.js"></script>
+		 <script type="text/javascript">$(document).foundation();</script>
 	</body>
 
+	<footer>&copy; 2017 Gabe Smith. Site powered by <a href="http://www.cs4development.com">CS4 Development</a></footer>
 
-	<footer>&copy; 2017 Gabe Smith. Powered by <a href="https://www.cs4development.com">CS4 Development</a></footer>
-	<!--<script src="script.js"></script>-->
-	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
-	 <script src="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/js/foundation.min.js"></script>
-
-	<script type="text/javascript">
-		jQuery(function($){
-	    	     $( '.menu-btn' ).click(function(){
-	    	     $('.responsive-menu').toggleClass('expand')
-	    	     })
-	        })
-	</script>
-
-	</html>
+</html>
